# lugia

./: .gitignore  Dockerfile  README.md  config.py  conversation_history.json  main.py  pyproject.toml  requirements.txt  system_prompt.txt
api/: main.py
core/: __init__.py  conversation.py  model.py  system_prompts.py
lugia/: config.py  conversation_history.json  conversation_service.py  infra.py  main.py
lugia/conversation_history/: conversation_20240321_101201.json  conversation_20240321_102637.json
lugia2/: config.py  conversation_service.py  model_manager.py
old_lugia/: infra.py  model_manager.py
static/css/: style.css
static/js/: script.js
www/: adaptive-layout.css  adaptive-layout.js  index.html  script.js  style.css
